--- a/configs/de-id/de_id_rules.yaml
+++ b/configs/de-id/de_id_rules.yaml
@@ -161,79 +161,20 @@ rules:
     - 'Address'
     - 'UID'
     - 'Time'
-
-  # # phi_tags = [
-  #           (0x0010, 0x0010),  # Patient's Name
-  #           (0x0010, 0x0020),  # Patient ID
-  #           (0x0010, 0x0030),  # Patient's Birth Date
-  #           (0x0010, 0x0040),  # Patient's Sex
-  #           (0x0010, 0x1000),  # Other Patient IDs
-  #           (0x0010, 0x1001),  # Other Patient Names
-  #           (0x0010, 0x1010),  # Patient's Age
-  #           (0x0010, 0x1020),  # Patient's Size
-  #           (0x0010, 0x1030),  # Patient's Weight
-  #           (0x0010, 0x1090),  # Medical Record Locator
-  #           (0x0020, 0x000D),  # Study Instance UID
-  #           (0x0020, 0x0010),  # Study ID
-  #           (0x0008, 0x0020),  # Study Date
-  #           (0x0008, 0x0030),  # Study Time
-  #           (0x0008, 0x0090),  # Referring Physician's Name
-  #           (0x0008, 0x0050),  # Accession Number
-  #           (0x0008, 0x1030),  # Study Description
-  #           (0x0008, 0x1048),  # Physician(s) of Record
-  #           (0x0008, 0x1060),  # Name of Physician(s) Reading Study
-  #           (0x0020, 0x000E),  # Series Instance UID
-  #           (0x0020, 0x0011),  # Series Number
-  #           (0x0008, 0x0021),  # Series Date
-  #           (0x0008, 0x0031),  # Series Time
-  #           (0x0008, 0x103E),  # Series Description
-  #           (0x0008, 0x1070),  # Operator's Name
-  #           (0x0008, 0x0070),  # Manufacturer
-  #           (0x0008, 0x0080),  # Institution Name
-  #           (0x0008, 0x1010),  # Station Name
-  #           (0x0008, 0x1040),  # Institutional Department Name
-  #           (0x0008, 0x1090),  # Manufacturer's Model Name
-  #           (0x0018, 0x1000),  # Device Serial Number
-  #           (0x0018, 0x1016),  # Secondary Capture Device Manufacturer
-  #           (0x0018, 0x1018),  # Secondary Capture Device Manufacturer's Model Name
-  #           (0x0008, 0x0018),  # SOP Instance UID
-  #           (0x0020, 0x0052),  # Frame of Reference UID
-  #           (0x0020, 0x0200),  # Synchronization Frame of Reference UID
-  #           (0x0008, 0x0081),  # Institution Address
-  #           (0x0038, 0x0010),  # Admission ID
-  #           (0x0038, 0x0061),  # Discharge Diagnosis Description
-  #           (0x0038, 0x0300),  # Current Patient Location
-  #           (0x0040, 0x0001),  # Scheduled Station AE Title
-  #           (0x0040, 0x0002),  # Scheduled Procedure Step Start Date
-  #           (0x0040, 0x0003),  # Scheduled Procedure Step Start Time
-  #           (0x0040, 0x0006),  # Scheduled Performing Physician's Name
-  #           (0x0040, 0x0010),  # Scheduled Station Name
-  #           (0x0040, 0x1001),  # Requested Procedure ID
-  #           (0x0040, 0x1002),  # Reason for the Requested Procedure
-  #           (0x0040, 0x2001),  # Reason for the Imaging Service Request
-  #           (0x0008, 0x1084),  # Admitting Diagnoses Description
-  #           (0x0008, 0x1120),  # Referenced Patient Sequence
-  #           (0x0010, 0x21B0),  # Additional Patient History
-  #           (0x0038, 0x0040),  # Discharge Diagnosis Description
-  #           (0x0040, 0x0241),  # Performed Station AE Title
-  #           (0x0040, 0x0242),  # Performed Station Name
-  #           (0x0040, 0x0243),  # Performed Location
-  #           (0x0040, 0x0244),  # Performed Procedure Step Start Date
-  #           (0x0040, 0x0245),  # Performed Procedure Step Start Time
-  #           (0x0040, 0x0253),  # Performed Procedure Step ID
-  #           (0x0008, 0x002a),  # Acquisition DateTime
-  #           (0x0008, 0x0022),  # Acquisition Date
-  #           (0x0008, 0x0023),  # Content Date
-  #           (0x0008, 0x0033),  # Content Time 
-  #           (0x0008, 0x0024),  # Overlay Date
-  #           (0x0008, 0x0025),  # Curve Date 
-  #           (0x0008, 0x0026),  # Overlay Time
-  #           (0x0008, 0x0027),  # Curve Time
-  #           (0x0008, 0x0028),  # Acquisition Time
-  #           (0x0008, 0x0029),  # Acquisition Duration
-  #           (0x0008, 0x002b),  # Acquisition Number
-  #           (0x0008, 0x0016),  # SOP Class UID
-  #           (0x0088, 0x0140),  # Storage Media File-set UID
-  #           (0x0008, 0x0094),  # Referring Physician's Telephone Numbers
-  #           (0x0013, 0x1013),  # Name: Private tag data
-  #       ]
+  regex:
+  - '[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Z|a-z]{2,}' #email
+  - \d{3}-\d{2}-\d{4} # SSN
+  - d{2}/\d{2}/\d{4}  # Date (MM/DD/YYYY)
+  - \d{2}.\d{2}.\d{4}  # Date (MM.DD.YYYY)
+  - \d{2}-\d{2}-\d{4} # Date (DD-MM-YYYY)
+  - \d{2}/\d{2}/\d{2} # Date (MM/DD/YY)
+  - \d{2}.\d{2}.\d{2}  # Date (MM.DD.YY)
+  - \d{2}-\d{2}-\d{2}  # Date (DD-MM-YY)
+  - \d{3}-\d{7}  # Phone Number
+  - \d{5}(?:[-\s]\d{4})?  # Zip Code
+  - \d{3}-\d{2}-\d{4}  # Driver's License
+  - \d{9}\b' # Social Security Number
+  - \d{3}-\d{2}-\d{4}  # Insurance Policy Number
+  - \d{5}(?:[-\s]\d{4})?  # Postal Code
+  - \d{3}-\d{2}-\d{4}  # Medical Record Number
+  - \d{3}-\d{2}-\d{4}  # Health Insurance Card Number
