--- a/configs/de-id/de_id_rules_auto.yaml
+++ b/configs/de-id/de_id_rules_auto.yaml
@@ -327,3 +327,20 @@ rules:
   - Fax Numbers
   - Address
   - Time
+  regex:
+  - '[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Z|a-z]{2,}' #email
+  - \d{3}-\d{2}-\d{4} # SSN
+  - d{2}/\d{2}/\d{4}  # Date (MM/DD/YYYY)
+  - \d{2}.\d{2}.\d{4}  # Date (MM.DD.YYYY)
+  - \d{2}-\d{2}-\d{4} # Date (DD-MM-YYYY)
+  - \d{2}/\d{2}/\d{2} # Date (MM/DD/YY)
+  - \d{2}.\d{2}.\d{2}  # Date (MM.DD.YY)
+  - \d{2}-\d{2}-\d{2}  # Date (DD-MM-YY)
+  - \d{3}-\d{7}  # Phone Number
+  - \d{5}(?:[-\s]\d{4})?  # Zip Code
+  - \d{3}-\d{2}-\d{4}  # Driver's License
+  - \d{9}\b' # Social Security Number
+  - \d{3}-\d{2}-\d{4}  # Insurance Policy Number
+  - \d{5}(?:[-\s]\d{4})?  # Postal Code
+  - \d{3}-\d{2}-\d{4}  # Medical Record Number
+  - \d{3}-\d{2}-\d{4}  # Health Insurance Card Number
