--- a/configs/de-id/de_id_rules_base.yaml
+++ b/configs/de-id/de_id_rules_base.yaml
@@ -4,7 +4,7 @@ rules:
         name: Patient's Name
       - tag:  [0x0010,0x0020]
         name: Patient ID
-      - tag:  [0x0010,0x0030]
+      - tag:  [0x0010,0x0040] 0010, 0040
         name: Patient's Sex
       - tag:  [0x0010,0x1010]
         name: Patient's Age
@@ -32,8 +32,6 @@ rules:
         name: Frame of Reference UID
       - tag:  [0x0008,0x1155]
         name: Reference SOP Instance UID
-  vr:  # detect PHI info in DICOM metadata by element VR
-      - PN # person's name
   keywords: # detect PHI info in DICOM metadata by element name
       - 'Address'
       - 'Telephone Numbers'
@@ -41,12 +39,13 @@ rules:
   regex: # patterns to detect PHI info in DICOM pixel data
       # - (?!.*[\d:;,])[A-Z][a-z]+(?:[ '-][A-Z][a-z]+|\.[A-Z])*[a-z]* #human name
       - '[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Z|a-z]{2,}' #email
-      - \d{3}-\d{2}-\d{4} # SSN
-      - d{2}/\d{2}/\d{4}  # Date (MM/DD/YYYY)
+      - \d{3}-\d{2}-\d{4} # SSN, Driver's License, Insurance Policy Number, Medical Record Number, Health Insurance Card Number
+      - \d{2}/\d{2}/\d{4}  # Date (MM/DD/YYYY)
       - \d{2}.\d{2}.\d{4}  # Date (MM.DD.YYYY)
       - \d{2}-\d{2}-\d{4} # Date (DD-MM-YYYY)
       - \d{3}[-.\s]?d{7}  # Phone Number
       - \d{3}[-.\s]?\d{3}[-.\s]?\d{4}  # Phone Number
       - \(\d{3}\)[\s]?\d{3}-\d{4}  # Phone Number
       - \d{5}(?:[-\s]\d{4})?  # Zip Code
+  # confidence threshold for detecting PHI info in DICOM metadata and for extract text from pixel data
   confidence_threshold: 80
